--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   deploy:
-    runs-on: Ubuntu 24.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
         with:
